<resources>
    <string name="app_name">Nutdanai\'s Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_message">I\'m a button</string>
    <string name="editmessage" translatable="false">I\'m an EditText</string>
    <string name="hinttext" translatable="false"> Write something here </string>
    <string name="checkedbox" translatable="false">Do you drink coffee?</string>
    <string name="myswitch" translatable="false">Do you drink coffee?</string>
    <string name="myradiobutton" translatable="false">Do you drink coffee?</string>
</resources>