<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message" />

    <Button
        android:id="@+id/mybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/button_message" />

    <EditText
        android:id="@+id/myedittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hinttext"
        android:text="@string/editmessage" />

    <CheckBox
        android:id="@+id/theCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkedbox" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myradiobutton" />

    <Switch
        android:id="@+id/theSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myswitch" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:onClick="onPictureClick"
        android:src="@drawable/ac" />

    <ImageButton
        android:id="@+id/myimagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ac" />

</LinearLayout>